# rogii_test

./: .gitignore  CMakeLists.txt  ChatWindow.qml  ChatWindowCreation.js  ErrorMessage.qml  README  StyledTextInput.qml  img.qrc  main.cpp  main.qml  qml.qrc  rogii_test_ru_RU.ts
imports/Common/: Constants.qml
src/data/: Message.cpp  Message.h  MessageRepository.cpp  MessageRepository.h
src/models/: UserListItem.cpp  UserListItem.h  UserListModel.cpp  UserListModel.h
src/network/: ClientImitator.cpp  ClientImitator.h  Sesrver.cpp  Sesrver.h
src/ui/: UIController.cpp  UIController.h
